# dcubabot

./: .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  bot_logic.py  calendario.py  calendarios.py  campus.py  check.sh  cloudbuild.yaml  commands.txt  conciertos.py  context_types.py  cron.py  database.py  dccommandhandler.py  dcubabot.py  dcubabotTest.py  deletablecommandhandler.py  errors.py  imageDraw.py  install.py  invitacionMail.py  labos.py  main.py  models.py  orga2Utils.py  pyproject.toml  ralondario.py  requirements.txt  river.py  tg_ids.py  vencimientoFinales.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  google-cloudrun-docker.yml
docs/: onboarding.md  spec.md
handlers/: admin.py  basic.py  callbacks.py  crons.py  db.py  groups.py  info.py  media.py  new_commands.py  update_groups.py
utils/: campus.py  conciertos.py  deletablecommandhandler.py  hora_feliz_dia.py  logging.py  orga2Utils.py  revive_groups.py  vencimientoFinales.py
